--- a/templates/add_expense.html
+++ b/templates/add_expense.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Expense</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-        }
-    </style>
+    <link rel="icon" href="{{ url_for('static', filename='bannu.png') }}" type="image/x-icon">
 </head>
 <body class="flex flex-col min-h-screen bg-gray-100">
     <!-- Header -->
